--- a/portofolio.html
+++ b/portofolio.html
@@ -17,6 +17,9 @@
     <link 
     rel="stylesheet" 
     href="./css/portofolio.css">
+    <style>
+       
+    </style>
 </head>
 
 <body class="body-font">
@@ -162,7 +165,7 @@
     </main>
 
     <footer class="footer-section">
-        <a href="index.html"><img src="images/WebStudio.svg" alt="WebStudio logo"></a>
+        <a class="webstudio-link" href="index.html"><img src="images/WebStudio.svg" alt="WebStudio logo"></a>
         <address>695 Park Ave, NY 10065, USA</address>
         <p><a class="studio-link" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
         <a class="phone-section" href="tel:+1212-772-4150">+1 212-772-4150</a>
