finished portofolio.css

--- a/portofolio.html
+++ b/portofolio.html
@@ -17,12 +17,14 @@
     <link 
     rel="stylesheet" 
     href="./css/portofolio.css">
-    <style>
-       
-    </style>
 </head>
-
 <body class="body-font">
+    <style>
+        body {
+         font-family: 'Roboto';
+         color: #fff;
+        }
+     </style>
     <header class="header-section">
         <a href="index.html">
         <img src="images/WebStudio.svg" alt="WebStudio logo">
@@ -94,7 +96,7 @@
             <img src="images/poster.jpg" 
             alt="Poster New Orlean vs Golden Star" height="294" width="370"> 
             <br>
-            <strong class="category-section">Poster New Orlean vs Golden Star</strong>
+            <strong class="name-section">Poster New Orlean vs Golden Star</strong>
             <br>
             <span class="category-section">Design</span>
         </div>
@@ -103,7 +105,7 @@
             <img src="images/seafood.jpg" 
             alt="Seafood Restaurant " height="294" width="370"> 
             <br>
-            <strong class="category-section">Seafood Restaurant </strong>
+            <strong class="name-section">Seafood Restaurant </strong>
             <br>
             <span class="category-section">Apps</span>
         </div>
@@ -112,7 +114,7 @@
             <img src="images/headphones.jpg" 
             alt="Project Prime" height="294" width="370"> 
             <br>
-            <strong class="category-section">Project Prime</strong>
+            <strong class="name-section">Project Prime</strong>
             <br>
             <span class="category-section">Marketing</span>
         </div>
@@ -121,7 +123,7 @@
             <img src="images/boxes.jpg" 
             alt="Project Boxes" height="294" width="370"> 
             <br>
-            <strong class="category-section">Project Boxes</strong>
+            <strong class="name-section">Project Boxes</strong>
             <br>
             <span class="category-section">Apps</span>
         </div>
@@ -130,7 +132,7 @@
             <img src="images/blackpc.jpg" 
             alt="Inspiration has no Borders" height="294" width="370"> 
             <br>
-            <strong class="category-section">Inspiration has no Borders</strong>
+            <strong class="name-section">Inspiration has no Borders</strong>
             <br>
             <span class="category-section">Web-site</span>
         </div>
@@ -139,7 +141,7 @@
             <img src="images/newspaper.jpg" 
             alt="Limited Edition" height="294" width="370"> 
             <br>
-            <strong class="category-section">Limited Edition</strong>
+            <strong class="name-section">Limited Edition</strong>
             <br>
             <span class="category-section">Design</span>
         </div>
@@ -148,7 +150,7 @@
             <img src="images/lab.jpg" 
             alt="Project LAB" height="294" width="370"> 
             <br>
-            <strong class="category-section">Project LAB</strong>
+            <strong class="name-section">Project LAB</strong>
             <br>
             <span class="category-section">Marketing</span>
         </div>
@@ -157,7 +159,7 @@
             <img src="images/computer.jpg" 
             alt="Growing Business" height="294" width="370"> 
             <br>
-            <strong class="category-section">Growing Business</strong>
+            <strong class="name-section">Growing Business</strong>
             <br>
             <span class="category-section">Apps</span>
         </div>
