--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header-section">
         <a href="index.html">
         <img src="images/WebStudio.svg" alt="WebStudio logo">
       </a>
