--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     href="./css/styles.css">
 </head>
 <body>
-    <header class="header-section">
+    <header>
         <a href="index.html">
         <img src="images/WebStudio.svg" alt="WebStudio logo">
       </a>
@@ -39,7 +39,7 @@
 
         <button>Request our service</button>
 
-                <div>
+                <div class="div-text">
                     <b>ATTENTION TO DETAILS</b>
                         <p>We go into all the details and processes
                            of your business to develop a customized
@@ -47,7 +47,7 @@
                         </p>
                </div>
 
-               <div>
+               <div class="div-text">
                     <b>PUNCTUALITY</b>
                         <p> With us, you can feel safe and secure. 
                             An important principle of the company: 
@@ -55,7 +55,7 @@
                         </p>  
                </div>
 
-               <div>
+               <div class="div-text">
                     <b>PLANNING</b>
                         <p> You will be able to observe and participate
                             in every phase of solution development and
@@ -63,7 +63,7 @@
                         </p> 
                </div>
 
-                <div>
+                <div class="div-text">
                     <b>mODERN TECHNOLOGIES</b>
                         <p> We use innovative tools to solve assigned 
                             tasks. It's time to simplify work processes.
@@ -82,7 +82,7 @@
 
             <h2>Our Team</h2>
 
-        <div>
+        <div class="text-picture">
             <img src="images/chris.jpg" alt="Christopher Walker" height="260" width="270"> 
             <br>
             <strong>Christopher Walker</strong>
@@ -90,7 +90,7 @@
             <span>Product Designer</span>
         </div>
 
-        <div>
+        <div class="text-picture">
             <img src="images/kylie.jpg" alt="Kylie Evans" height="260" width="270">
             <br>
             <strong>Kylie Evans</strong>
@@ -98,7 +98,7 @@
             <span>Frontend Developer</span>  
         </div>
 
-        <div>
+        <div class="text-picture">
             <img src="images/ryan.jpg" alt="Ryan Harris" height="260" width="270">
             <br>
             <strong>Ryan Harris</strong>
@@ -106,7 +106,7 @@
             <span>Marketing</span>
         </div>
 
-        <div>
+        <div class="text-picture">
             <img src="images/tyler.jpg" alt="Tyler Moore" height="260" width="270">
             <br>
             <strong>Tyler Moore</strong>
@@ -115,12 +115,12 @@
         </div>
     </main>
     
-    <footer>
-        <a href="index.html"><img src="images/WebStudio.svg" alt="WebStudio logo"></a>
+    <footer class="footer-section">
+        <a class="webstudio-link" href="index.html"><img src="images/WebStudio.svg" alt="WebStudio logo"></a>
         <address>695 Park Ave, NY 10065, USA</address>
-        <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-        <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+        <p><a class="studio-link" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+        <a class="phone-section" href="tel:+1212-772-4150">+1 212-772-4150</a>
       </footer>
-   
+      
 </body>
 </html>
