--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link
     rel="stylesheet"
     href="./css/styles.css">
+    <link
+    rel="stylesheet"
+    href="./css/portofolio.css">
 </head>
 <body>
     <header>
