--- a/portofolio.html
+++ b/portofolio.html
@@ -40,16 +40,24 @@
         <nav>
             <ul>
               <li>
-                <a class="white-button" 
+                <a class="buttons" 
                 href="http://127.0.0.1:5500/all.html" 
                 rel="noopener noreferrer nofollow" 
                 target="_blank"></a>
                 <button class="all-button" type="button"
                     >All</button>
                 </li>
+                <li>
+                    <a class="buttons" 
+                    href="http://127.0.0.1:5500/web.html" 
+                    rel="noopener noreferrer nofollow" 
+                    target="_blank"></a>
+                    <button class="web-button" type="button"
+                        >Web-sites</button>
+                    </li>
                     <li>
                         <a
-                        class="black-button" 
+                        class="buttons" 
                         href="http://127.0.0.1:5500/apps.html"
                         rel="noopener noreferrer nofollow" 
                         target="_blank"></a>
@@ -58,7 +66,7 @@
                     </li>
                     <li>
                         <a
-                        class="black-button" 
+                        class="buttons" 
                         href="http://127.0.0.1:5500/design.html"
                         rel="noopener noreferrer nofollow" 
                         target="_blank"></a>
@@ -67,7 +75,7 @@
                     </li>
                     <li>
                         <a
-                        class="black-button"
+                        class="buttons"
                         href="http://127.0.0.1:5500/marketing.html"
                         rel="noopener noreferrer nofollow"
                         target="_blank"></a>
