--- a/index.html
+++ b/index.html
@@ -1,129 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    rel="preconnect"
-    href="https://fonts.googleapis.com">
-    <link
-    rel="preconnect"
-    href="https://fonts.gstatic.com"
-    crossorigin>
-    <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="./css/styles.css">
-    <link
-    rel="stylesheet"
-    href="./css/portofolio.css">
-</head>
-<body>
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Web Studio</title>
+  </head>
+  <body>
+    <!-- header section-->
     <header>
-        <a href="index.html">
-        <img src="images/WebStudio.svg" alt="WebStudio logo">
-      </a>
-        <nav>
-        <ul>
-          <li><a href="studio.html">Studio</a></li>
-          <li><a href="portofolio.html">Portfolio</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
+      <!-- navigation bar -->
+      <nav class="main-navigation-container">
+        <!-- logo -->
+        <a class="logo link" href="./index.html"
+          >Web<span class="part-of-logo">Studio</span>
+        </a>
+        <!-- studio, portofolio, contacts -->
+        <ul class="navigation-list list">
+          <li>
+            <a class="nav-link link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-link link" href="">Contacts</a>
+          </li>
         </ul>
-    </nav>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+1212-772-4150">+1 212-772-4150</a>
+      </nav>
+      <!-- contact adress section -->
+      <address class="address-container">
+        <ul class="address-list list">
+          <li>
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
-    <main>
-
-        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-
-        <button>Request our service</button>
-
-                <div class="div-text">
-                    <b>ATTENTION TO DETAILS</b>
-                        <p>We go into all the details and processes
-                           of your business to develop a customized
-                           solution.
-                        </p>
-               </div>
-
-               <div class="div-text">
-                    <b>PUNCTUALITY</b>
-                        <p> With us, you can feel safe and secure. 
-                            An important principle of the company: 
-                            respect your time and deadlines.
-                        </p>  
-               </div>
-
-               <div class="div-text">
-                    <b>PLANNING</b>
-                        <p> You will be able to observe and participate
-                            in every phase of solution development and
-                            implementation.
-                        </p> 
-               </div>
-
-                <div class="div-text">
-                    <b>mODERN TECHNOLOGIES</b>
-                        <p> We use innovative tools to solve assigned 
-                            tasks. It's time to simplify work processes.
-                        </p>  
-                </div>
-
-        <h2>What we do</h2>
-
-        <div>
-
-            <img src="images/keyboard.jpg" alt="writing on keyboard" width="300">
-            <img src="images/phone.jpg" alt="looking at phone" width="300">
-            <img src="images/tablet.jpg" alt="tablet color palette" width="300">
-
-        </div>
-
-            <h2>Our Team</h2>
-
-        <div class="text-picture">
-            <img src="images/chris.jpg" alt="Christopher Walker" height="260" width="270"> 
-            <br>
-            <strong>Christopher Walker</strong>
-            <br>
-            <span>Product Designer</span>
-        </div>
-
-        <div class="text-picture">
-            <img src="images/kylie.jpg" alt="Kylie Evans" height="260" width="270">
-            <br>
-            <strong>Kylie Evans</strong>
-            <br>
-            <span>Frontend Developer</span>  
-        </div>
-
-        <div class="text-picture">
-            <img src="images/ryan.jpg" alt="Ryan Harris" height="260" width="270">
-            <br>
-            <strong>Ryan Harris</strong>
-            <br>
-            <span>Marketing</span>
-        </div>
-
-        <div class="text-picture">
-            <img src="images/tyler.jpg" alt="Tyler Moore" height="260" width="270">
-            <br>
-            <strong>Tyler Moore</strong>
-            <br>
-            <span>UI Designer</span>   
-        </div>
+    <main class="main-container-index">
+      <!-- hero image section -->
+      <section class="hero-image-section-container">
+        <h1 class="hero-image-header">Effective Solutions for Your Business</h1>
+        <button class="hero-image-button" type="button">Order Service</button>
+      </section>
+      <!-- section 1 list of qualities of the webstudio-->
+      <section class="first-section-container">
+        <h2 class="first-section-header">Asdfghjklfo</h2>
+        <ul class="first-section-list list">
+          <!-- first quality -->
+          <li class="quality-container">
+            <h3 class="quality-header">Strategy</h3>
+            <p class="quality-description">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <!-- second quality -->
+          <li class="quality-container">
+            <h3 class="quality-header">Punctuality</h3>
+            <p class="quality-description">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <!-- third quality -->
+          <li class="quality-container">
+            <h3 class="quality-header">Diligence</h3>
+            <p class="quality-description">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <!-- fourth quality -->
+          <li class="quality-container">
+            <h3 class="quality-header">Technologies</h3>
+            <p class="quality-description">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- section 2 with images -->
+      <section class="section-two-container">
+        <h2 class="section-two-header">What are we doing</h2>
+        <!-- images for the second section -->
+        <ul class="sec-two-image-list list">
+          <li>
+            <img
+              class="image-section-two"
+              src="./images/monitorimage.jpg"
+              alt="monitorimage"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              class="image-section-two"
+              src="./images/phoneimage2.jpg"
+              alt="imagewithmultiplephones"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              class="image-section-two"
+              src="./images/phoneimage1.jpg"
+              alt="imagewithaphone"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- section 3 description of the team -->
+      <section class="section-three-container">
+        <h2 class="section-three-header">Our Team</h2>
+        <!-- list of members of the team with description -->
+        <ul class="sec-three-members-list list">
+          <!-- first member -->
+          <li class="team-member-container">
+            <img
+              class="team-member-image"
+              src="./images/teammember1.jpg"
+              alt="firstmember"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-member-header">Mark Guerrero</h3>
+            <p class="team-member-description">Product Designer</p>
+          </li>
+          <!-- second member -->
+          <li class="team-member-container">
+            <img
+              class="team-member-image"
+              src="./images/teammember2.jpg"
+              alt="secondmember"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-member-header">Tom Ford</h3>
+            <p class="team-member-description">Frontend Developer</p>
+          </li>
+          <!-- third member -->
+          <li class="team-member-container">
+            <img
+              class="team-member-image"
+              src="./images/teammember3.jpg"
+              alt="thirdmember"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-member-header">Camila Garcia</h3>
+            <p class="team-member-description">Marketing</p>
+          </li>
+          <!-- fourth member -->
+          <li class="team-member-container">
+            <img
+              class="team-member-image"
+              src="./images/teammember4.jpg"
+              alt="fourthmember"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-member-header">Daniel Wilson</h3>
+            <p class="team-member-description">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    
-    <footer class="footer-section">
-        <a class="webstudio-link" href="index.html"><img src="images/WebStudio.svg" alt="WebStudio logo"></a>
-        <address>695 Park Ave, NY 10065, USA</address>
-        <p><a class="studio-link" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-        <a class="phone-section" href="tel:+1212-772-4150">+1 212-772-4150</a>
-      </footer>
-      
-</body>
+    <footer class="footer-container">
+      <a class="logo link" href="./index.html"
+        >Web<span class="part-of-logo-footer">Studio</span></a
+      >
+      <p class="footer-additional-description">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
