--- a/portofolio.html
+++ b/portofolio.html
@@ -1,176 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portofolio</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    rel="preconnect"
-    href="https://fonts.googleapis.com">
-    <link
-    rel="preconnect"
-    href="https://fonts.gstatic.com"
-    crossorigin>
-    <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
-    <link 
-    rel="stylesheet" 
-    href="./css/portofolio.css">
-</head>
-<body class="body-font">
-    <header class="header-section">
-        <a href="index.html">
-        <img src="images/WebStudio.svg" alt="WebStudio logo">
-      </a>
-
-        <nav>
-        <ul>
-          <li><a class="studio-link" href="studio.html">Studio</a></li>
-          <li><a class="portofolio-link" href="portofolio.html">Portfolio</a></li>
-          <li><a class="contacts-link" href="contacts.html">Contacts</a></li>
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <header>
+      <!-- navigation bar -->
+      <nav class="main-navigation-container">
+        <!-- logo -->
+        <a class="logo link" href="./index.html"
+          >Web<span class="part-of-logo">Studio</span>
+        </a>
+        <!-- studio, portofolio, contacts -->
+        <ul class="navigation-list list">
+          <li>
+            <a class="nav-link link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-link link" href="">Contacts</a>
+          </li>
         </ul>
-    </nav>
-
-    <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a class="contacts" href="tel:+1212-772-4150">+1 212-772-4150</a>
+      </nav>
+      <!-- contact adress section -->
+      <address class="address-container">
+        <ul class="address-list list">
+          <li>
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
+    <main class="main-container-portfolio">
+      <!-- buttons section -->
+      <section class="section-one-container">
+        <h1>DIJIOjdijdisj</h1>
+        <ul class="sec-one-list-of-buttons list">
+          <!-- first button -->
+          <li>
+            <button class="sec-one-button" type="button">All</button>
+          </li>
+          <!-- second button -->
+          <li>
+            <button class="sec-one-button" type="button">Web Site</button>
+          </li>
+          <!-- third button -->
+          <li>
+            <button class="sec-one-button" type="button">App</button>
+          </li>
+          <!-- fourth button -->
+          <li>
+            <button class="sec-one-button" type="button">Design</button>
+          </li>
+          <!-- fifth button -->
+          <li>
+            <button class="sec-one-button" type="button">Marketing</button>
+          </li>
+        </ul>
 
-    <main class="main-section">
-        <nav>
-            <ul>
-              <li>
-                <a  
-                href="http://127.0.0.1:5500/all.html" 
-                rel="noopener noreferrer nofollow" 
-                target="_blank"></a>
-                <button class="all-button" type="button"
-                    >All</button>
-                </li>
-                <li>
-                    <a  
-                    href="http://127.0.0.1:5500/web.html" 
-                    rel="noopener noreferrer nofollow" 
-                    target="_blank"></a>
-                    <button class="web-button" type="button"
-                        >Web-sites</button>
-                    </li>
-                    <li>
-                        <a 
-                        href="http://127.0.0.1:5500/apps.html"
-                        rel="noopener noreferrer nofollow" 
-                        target="_blank"></a>
-                        <button class="app-button" type="button"
-                        >Apps</button>
-                    </li>
-                    <li>
-                        <a
-                        href="http://127.0.0.1:5500/design.html"
-                        rel="noopener noreferrer nofollow" 
-                        target="_blank"></a>
-                        <button class="design-button" type="button"
-                        >Design</button>
-                    </li>
-                    <li>
-                        <a
-                        href="http://127.0.0.1:5500/marketing.html"
-                        rel="noopener noreferrer nofollow"
-                        target="_blank"></a>
-                        <button class="marketing-button" type="button"
-                        >Marketing</button>
-                    </li>
-                </ul>
-        </nav>
-
-        <div>
-            <img src="images/computer.jpg" 
-            alt="Technoduck" height="294" width="370"> 
-            <br>
-            <strong class="name-section">Technoduck</strong>
-            <br>
-            <span class="category-section">Web-site</span>
-        </div>
-
-        <div>
-            <img src="images/poster.jpg" 
-            alt="Poster New Orlean vs Golden Star" height="294" width="370"> 
-            <br>
-            <strong class="name-section">Poster New Orlean vs Golden Star</strong>
-            <br>
-            <span class="category-section">Design</span>
-        </div>
-
-        <div>
-            <img src="images/seafood.jpg" 
-            alt="Seafood Restaurant " height="294" width="370"> 
-            <br>
-            <strong class="name-section">Seafood Restaurant </strong>
-            <br>
-            <span class="category-section">Apps</span>
-        </div>
-
-        <div>
-            <img src="images/headphones.jpg" 
-            alt="Project Prime" height="294" width="370"> 
-            <br>
-            <strong class="name-section">Project Prime</strong>
-            <br>
-            <span class="category-section">Marketing</span>
-        </div>
-
-        <div>
-            <img src="images/boxes.jpg" 
-            alt="Project Boxes" height="294" width="370"> 
-            <br>
-            <strong class="name-section">Project Boxes</strong>
-            <br>
-            <span class="category-section">Apps</span>
-        </div>
-
-        <div>
-            <img src="images/blackpc.jpg" 
-            alt="Inspiration has no Borders" height="294" width="370"> 
-            <br>
-            <strong class="name-section">Inspiration has no Borders</strong>
-            <br>
-            <span class="category-section">Web-site</span>
-        </div>
-
-        <div>
-            <img src="images/newspaper.jpg" 
-            alt="Limited Edition" height="294" width="370"> 
-            <br>
-            <strong class="name-section">Limited Edition</strong>
-            <br>
-            <span class="category-section">Design</span>
-        </div>
-
-        <div>
-            <img src="images/lab.jpg" 
-            alt="Project LAB" height="294" width="370"> 
-            <br>
-            <strong class="name-section">Project LAB</strong>
-            <br>
-            <span class="category-section">Marketing</span>
-        </div>
-
-        <div>
-            <img src="images/computer.jpg" 
-            alt="Growing Business" height="294" width="370"> 
-            <br>
-            <strong class="name-section">Growing Business</strong>
-            <br>
-            <span class="category-section">Apps</span>
-        </div>
-
+        <!-- list of portfolio projects -->
+        <ul class="list-of-projects-sec-two list">
+          <!-- first card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/firstimage.jpg"
+                width="360"
+                height="300"
+                alt="bankingapp"
+              />
+              <h2 class="project-header">Banking App Interface Concept</h2>
+              <p class="project-description">App</p>
+            </a>
+          </li>
+          <!-- second card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/secondimage.jpg"
+                width="360"
+                height="300"
+                alt="cashlesspayment"
+              />
+              <h2 class="project-header">Cashless Payment</h2>
+              <p class="project-description">Marketing</p>
+            </a>
+          </li>
+          <!-- third card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/thirdimage.jpg"
+                width="360"
+                height="300"
+                alt="meditationapp"
+              />
+              <h2 class="project-header">Meditation App</h2>
+              <p class="project-description">App</p>
+            </a>
+          </li>
+          <!-- fourth card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/fourthimage.jpg"
+                width="360"
+                height="300"
+                alt="taxiservice"
+              />
+              <h2 class="project-header">Taxi Service</h2>
+              <p class="project-description">Marketing</p>
+            </a>
+          </li>
+          <!-- fifth card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/fifthimage.jpg"
+                width="360"
+                height="300"
+                alt="ScreenIllustrations"
+              />
+              <h2 class="project-header">Screen Illustrations</h2>
+              <p class="project-description">Design</p>
+            </a>
+          </li>
+          <!-- sixth card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/sixthimage.jpg"
+                width="360"
+                height="300"
+                alt="onlinecourse"
+              />
+              <h2 class="project-header">Online Courses</h2>
+              <p class="project-description">Marketing</p>
+            </a>
+          </li>
+          <!-- seventh card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/seventhimage.jpg"
+                width="360"
+                height="300"
+                alt="igstoriesconcept"
+              />
+              <h2 class="project-header">Instagram Stories Concept</h2>
+              <p class="project-description">Design</p>
+            </a>
+          </li>
+          <!-- eight card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/eightimage.jpg"
+                width="360"
+                height="300"
+                alt="organicfood"
+              />
+              <h2 class="project-header">Organic Food</h2>
+              <p class="project-description">Web Site</p>
+            </a>
+          </li>
+          <!-- ninth card -->
+          <li class="project-container">
+            <a class="project-link link" href="">
+              <img
+                class="project-image"
+                src="./images/ninthimage.jpg"
+                width="360"
+                height="300"
+                alt="freshcoffee"
+              />
+              <h2 class="project-header">Fresh Coffee</h2>
+              <p class="project-description">Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
-
-    <footer class="footer-section">
-        <a class="webstudio-link" href="index.html"><img src="images/WebStudio.svg" alt="WebStudio logo"></a>
-        <address>695 Park Ave, NY 10065, USA</address>
-        <p><a class="studio-link" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-        <a class="phone-section" href="tel:+1212-772-4150">+1 212-772-4150</a>
-      </footer>
-      
-</body>
+    <footer class="footer-container">
+      <a class="logo link" href="./index.html"
+        >Web<span class="part-of-logo-footer">Studio</span></a
+      >
+      <p class="footer-additional-description">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
